# sim-lisp

./: README.md  TODO.md  default.nix  sim-lisp.cabal
examples/: factorial.sim  fibo.lisp  list-ops.sim
src/: Atom.hs  Effects.hs  Errors.hs  Eval.hs  LParser.hs  Main.hs  Utils.hs
src/Effects/: ConsoleIO.hs
src/stdlib/: core.sim  list.sim
tests/: CallStackTest.hs  EvalTest.hs  LParserTest.hs  StdlibTest.hs  _main.hs
