cabal-version:       2.2
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                simlisp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Akshay Nair
maintainer:          phenax5@gmail.com
-- copyright:
-- category:
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
    LParser
  build-depends:
    parsec,
    base >=4.14 && <4.15
  default-language:    Haskell2010

executable lithp-run
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    parsec,
    base >=4.14 && <4.15
  default-language:    Haskell2010
  --other-modules:
    --LithParser
  -- other-extensions:
  -- hs-source-dirs:
