cabal-version:       2.2
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                simlisp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Akshay Nair
maintainer:          phenax5@gmail.com
-- copyright:
-- category:
build-type:          Simple

common lib
  hs-source-dirs: src
  build-depends:
    parsec,
    hspec,
    base >=4.14 && <4.15
  default-language:    Haskell2010

Test-Suite testis-cool
  import: lib
  type:       exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:    _main.hs

library
  import: lib
  exposed-modules:
    LParser

executable lithp-run
  import: lib
  main-is: Main.hs
  --other-modules:
    --LithParser
  -- other-extensions:
  -- hs-source-dirs:
