cabal-version:       2.2

name:                simlisp
version:             0.1.0.0
license: MIT
license-file:        LICENSE
author:              Akshay Nair
maintainer:          phenax5@gmail.com
build-type:          Simple

common lib
  hs-source-dirs: src
  build-depends:
    parsec,
    hspec,
    containers,
    raw-strings-qq,
    bytestring,
    file-embed,
    transformers,
    base >=4.14 && <4.15
  default-language:    Haskell2010

Test-Suite test
  import: lib
  type:       exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:    _main.hs
  default: false

library library
  import: lib
  exposed-modules:
    LParser
    Atom
    Errors
    Utils
    Eval

executable simlisp
  import: lib
  main-is: Main.hs
